--- a/health-app/package.json
+++ b/health-app/package.json
@@ -7,10 +7,15 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "axios": "^0.21.1",
+    "chart.js": "^2.9.0",
     "core-js": "^3.6.5",
     "materialize-css": "^1.0.0-rc.2",
     "register-service-worker": "^1.7.1",
     "vue": "^2.6.11",
+    "vue-chartjs": "^3.5.1",
+    "vue-chartkick": "^1.1.0",
+    "vue-material": "^1.0.0-beta-15",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
   },
